# lab1

./: CMakeLists.txt  MainFrm.h  OptionDialog.cpp  README.md  Resource.h  SameGame.cpp  SameGameView.cpp  stdafx.cpp
Debug/: SameGame.ilk
UnitTests/: SameGameBoardTest.cpp  SameGameDocTest.cpp  SameGameViewTest.cpp
cpp/: SameGameBoard.cpp  SameGameDoc.cpp
headers/: OptionDialog.h
